# heritage-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.toml  pipeline.example.yaml  pyproject.toml
.github/workflows/: publish.yml
src/heritage_cli/: __init__.py  main.py  orchestrator.py
src/heritage_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/heritage_cli/commands/: __init__.py  dibble.py  hoard.py  libby.py  stratigraph.py  trowel.py
tests/: test_integration.py  test_orchestrator.py  test_smoke.py
