[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heritage-cli"
version = "1.0.1"
description = "Unified CLI for the heritage science open-source ecosystem — orchestrates HOARD, StratiGraph, Trowel, Libby, Dibble, and other tools"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mark Bouck" },
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
hoard = ["hoard"]
libby = ["libby"]
dibble = ["dibble"]
trowel = ["trowel"]
stratigraph = ["stratigraph"]

[project.scripts]
heritage = "heritage_cli.main:app"

[project.entry-points."heritage.tools"]
hoard = "heritage_cli.commands.hoard"
stratigraph = "heritage_cli.commands.stratigraph"
trowel = "heritage_cli.commands.trowel"
libby = "heritage_cli.commands.libby"
dibble = "heritage_cli.commands.dibble"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
